<resources>
    <string name="app_name">Task1</string>
    <string name="swap">Swap</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="delete">Delete</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="clear_all">Clear All</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="convert">Convert</string>
    <string name="copy_1">Copy 1</string>
    <string name="copy_2">Copy 2</string>
    <string-array name="unit_category">
        <item>Distance</item>
        <item>Weight</item>
        <item>Temperature</item>
    </string-array>
    <string-array name="distance">
        <item>Meter</item>
        <item>Feet</item>
        <item>Miles</item>
    </string-array>
    <string-array name="weight">
        <item>Kilograms</item>
        <item>Pounds</item>
        <item>Ounce</item>
    </string-array>
    <string-array name="temperature">
        <item>Celsius</item>
        <item>Kelvin</item>
        <item>Fahrenheit</item>
    </string-array>
</resources>
